--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,5 @@
 // Todo 2. Add email verify.
 // Todo 3. Add some images to login / register page.
 // Todo add email type to text field in login / sign up page.
+// todo add only number to typed in target field
+// 
